k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mortalbook
  labels:
    name: mortalbook
    app.kubernetes.io/part-of: mortalbook
    environment: production
